--- a/assets/scss/index.scss
+++ b/assets/scss/index.scss
@@ -151,7 +151,9 @@
         top: 0;
         left: 0;
         display: block;
+        height: 0;
         width: 80%;
+        padding-bottom: 56.25%;
         margin: 40px auto;
       }
     }
