--- a/layouts/index.html
+++ b/layouts/index.html
@@ -254,6 +254,8 @@
       if (language == 'zh') {
         start2.css('display', 'none')
         start1.attr('src', "https://kubesphere-community.pek3b.qingstor.com/videos/kubesphere-demo-cn.mp4")
+        video.css('height', 'auto')
+
       }
       else if (language == 'en') {
         start1.css('display', 'none')
