--- a/layouts/docs/single.html
+++ b/layouts/docs/single.html
@@ -122,7 +122,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <div class="md-body">
                         <h1>{{ .Title }}</h1>
                         {{ .Content }}
-                        <section class="feedback-div">
+                        <section class="feedback-section">
                             <p class="title">{{ i18n "feedback"}}</p>
                             <p>{{i18n "Was this page Helpful?"}}</p>
                             <button class="Yes">{{ i18n "Yes" }}</button>
